==> integrarium/stm32_ventil/i2c_sw.c <==
#include "i2c_sw.h"
#define  SW_I2C_WAIT_TIME  22
#define  I2C_READ       0x01
#define  READ_CMD       1
#define  WRITE_CMD      0
#define SW_I2C2_SCL_GPIO  GPIO_SW_I2C2_SCL
#define SW_I2C2_SDA_GPIO  GPIO_SW_I2C2_SDA
#define SW_I2C2_SCL_PIN   GPIO_SW_I2C2_SCL_PIN
#define SW_I2C2_SDA_PIN   GPIO_SW_I2C2_SDA_PIN
#define SW_I2Cx_SCL_GPIO  GPIO_SW_I2Cx_SCL
#define SW_I2Cx_SDA_GPIO  GPIO_SW_I2Cx_SDA
#define SW_I2Cx_SCL_PIN   GPIO_SW_I2Cx_SCL_PIN
#define SW_I2Cx_SDA_PIN   GPIO_SW_I2Cx_SDA_PIN
	#define TRUE 1
	#define FALSE 0

void SW_I2C_initial(void)
{
	GPIO_InitTypeDef			GPIO_InitStructure;

	GPIO_InitStructure.GPIO_Speed=GPIO_Speed_50MHz;
	GPIO_InitStructure.GPIO_Mode=GPIO_Mode_Out_OD;
	
	GPIO_InitStructure.GPIO_Pin   = GPIO_SW_I2C2_SCL_PIN;
	GPIO_Init(GPIO_SW_I2C2_SCL, &GPIO_InitStructure);
	GPIO_InitStructure.GPIO_Pin   = GPIO_SW_I2C2_SDA_PIN;
	GPIO_Init(GPIO_SW_I2C2_SDA, &GPIO_InitStructure);

	/*
	GPIO_InitStructure.Pin   = GPIO_SW_I2Cx_SCL_PIN;
	HAL_GPIO_Init(GPIO_SW_I2Cx_SCL, &GPIO_InitStructure);
	GPIO_InitStructure.Pin   = GPIO_SW_I2Cx_SDA_PIN;
	HAL_GPIO_Init(GPIO_SW_I2Cx_SDA, &GPIO_InitStructure);
	*/


}

void sda_high(uint8_t sel)
{
    if(sel == 1)
        GPIO_SetBits(SW_I2C2_SDA_GPIO, SW_I2C2_SDA_PIN);
    //else if(sel==x) ...
}

void sda_low(uint8_t sel)
{
    if(sel == 1)
        GPIO_ResetBits(SW_I2C2_SDA_GPIO, SW_I2C2_SDA_PIN);
    //else if(sel==x) ...
}

void scl_high(uint8_t sel)
{
    if(sel == 1)
        GPIO_SetBits(SW_I2C2_SCL_GPIO, SW_I2C2_SCL_PIN);
    //else if(sel==x) ...
}

void scl_low(uint8_t sel)
{
    if(sel == 1)
        GPIO_ResetBits(SW_I2C2_SCL_GPIO, SW_I2C2_SCL_PIN);
    //else if(sel==x) ...
}

void sda_in_mode(uint8_t sel)
{
    GPIO_InitTypeDef GPIO_InitStructure;

    GPIO_InitStructure.GPIO_Speed=GPIO_Speed_50MHz;
		GPIO_InitStructure.GPIO_Mode=GPIO_Mode_IN_FLOATING;
		
    if(sel == 1)
    {
        GPIO_InitStructure.GPIO_Pin   = SW_I2C2_SDA_PIN;
        GPIO_Init(SW_I2C2_SDA_GPIO, &GPIO_InitStructure);
    }
    //else if(sel==x) ...

}

void sda_out_mode(uint8_t sel)
{
    GPIO_InitTypeDef GPIO_InitStructure;
	
		GPIO_InitStructure.GPIO_Speed=GPIO_Speed_50MHz;
		GPIO_InitStructure.GPIO_Mode=GPIO_Mode_Out_OD;
		
    if(sel == 1)
    {
        GPIO_InitStructure.GPIO_Pin   = SW_I2C2_SDA_PIN;
        GPIO_Init(SW_I2C2_SDA_GPIO, &GPIO_InitStructure);
    }
    //else if(sel==x) ...
}

void scl_in_mode(uint8_t sel)
{
    GPIO_InitTypeDef GPIO_InitStructure;
	
		GPIO_InitStructure.GPIO_Speed=GPIO_Speed_50MHz;
		GPIO_InitStructure.GPIO_Mode=GPIO_Mode_Out_OD; //пїЅпїЅпїЅпїЅпїЅпїЅ out? пїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅ
		
    if(sel == 1)
    {
        GPIO_InitStructure.GPIO_Pin   = SW_I2C2_SCL_PIN;
        HAL_GPIO_Init(SW_I2C2_SCL_GPIO, &GPIO_InitStructure);
    }
    //else if(sel==x) ...
}

void scl_out_mode(uint8_t sel)
{
		GPIO_InitTypeDef GPIO_InitStructure;

		GPIO_InitStructure.GPIO_Speed=GPIO_Speed_50MHz;
		GPIO_InitStructure.GPIO_Mode=GPIO_Mode_Out_OD;
		
    if(sel == 1)
    {
        GPIO_InitStructure.GPIO_Pin   = SW_I2C2_SCL_PIN;
        HAL_GPIO_Init(SW_I2C2_SCL_GPIO, &GPIO_InitStructure);
    }
    //else if(sel==x) ...
}

uint8_t SW_I2C_ReadVal_SDA(uint8_t sel)
{
    if(sel == 1)
        return GPIO_ReadInputDataBit(SW_I2C2_SDA_GPIO, SW_I2C2_SDA_PIN);
		return 0;
}

uint8_t SW_I2C_ReadVal_SCL(uint8_t sel)
{
    if(sel == 1)
        return GPIO_ReadInputDataBit(SW_I2C2_SCL_GPIO, SW_I2C2_SCL_PIN);

    return 0;
}
